--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.2.1",
     "moment": "^2.20.1",
     "vue": "^2.5.2",
+    "vue-datepicker-local": "^1.0.9",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
