--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "clean-webpack-plugin": "^0.1.18",
     "jquery": "^3.2.1",
     "moment": "^2.20.1",
     "vue": "^2.5.2",
