--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.20.1",
     "vue": "^2.5.2",
     "vue-datepicker-local": "^1.0.9",
+    "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
