--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean-webpack-plugin": "^0.1.18",
     "jquery": "^3.2.1",
     "moment": "^2.20.1",
+    "vee-validate": "^2.0.3",
     "vue": "^2.5.2",
     "vue-datepicker-local": "^1.0.9",
     "vue-resource": "^1.3.5",
