--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,6 @@
       }
     }],
     "stage-2"
-  ],
-  "plugins": ["transform-vue-jsx", "transform-runtime"]
+  ,["es2015", {"modules": false}]],
+  "plugins": ["transform-vue-jsx", "transform-runtime", ["component", {"libraryName": "element-ui", "styleLibraryName": "theme-chalk"}]]
 }
