--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "clean-webpack-plugin": "^0.1.18",
+    "echarts": "^4.0.2",
     "element-ui": "^2.1.0",
     "jquery": "^3.2.1",
     "moment": "^2.20.1",
