--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "file-loader": "^1.1.6",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^4.2.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "node-notifier": "^5.1.2",
